@@ -7,6 +7,7 @@
 ## Bugfixes
 
 - Fix searchModel returning KImage living in different thread -- kaneryu on 2025-01-11
+- fix multiple bugs related to downloading songs -- kaneryu on 2025-01-19
 
 
 
